fixed overflow bugs and header height

--- a/src/components/Forms/Button/button.css
+++ b/src/components/Forms/Button/button.css
@@ -11,9 +11,16 @@
     padding-right: 14px;
     border-radius: 5px;
     cursor: pointer;
+    border: 1px solid var(--base-orange);
 }
 
 .devis-btn{
     margin-right: auto;
     margin-left: auto;
+}
+
+.Button:hover, .devis-btn:hover{
+    color: var(--base-orange);
+    background: none;
+    backdrop-filter: blur(4px);
 }
