--- a/src/containers/Header/header.css
+++ b/src/containers/Header/header.css
@@ -3,7 +3,7 @@
     z-index: 10;
     position: fixed;
     width: 100vw;
-    height: 70px;
+    height: 60px;
     display: flex;
     flex-direction: row;
     padding-right: 150px;
