--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
 
 * {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -16,8 +17,4 @@
 *::selection{
   background-color: var(--base-orange);
   color: white;
-}
-
-body{
-  /* width: 100%; */
 }
