--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -2,8 +2,9 @@
 
 #home{
     background-image: url('/public/images/homeImage.jpg');
-    width: 100vw;
+    width: auto;
     height: 100vh;
+    min-height: 650px;
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
@@ -36,6 +37,7 @@
     display: flex;
     flex-direction: row;
     height: 650px;
+    /* width: ; */
 }
 
 .right, .left{
@@ -61,7 +63,7 @@
     border-radius: 0% 2% 5% 5%;
     box-shadow: 0px 3px 10px 0px var(--shadow-color);
     padding-right: 5%;
-    /* overflow: scroll; */
+    overflow-y: scroll;
 } 
 .right h3{
     color: var(--base-orange);
